# k_management_bot

./: README.md  bot.py  pyproject.toml  setup.cfg
config_data/: __init__.py  load_config_bot.py  load_config_db.py
database/: engine.py  request.py
handlers/: __init__.py  base_command.py  task_commands.py
keyboards/: __init__.py  menu_kb.py  task_kb.py
lexicon/: __init__.py  lexicon.py
middlewares/: __init__.py  check_user.py
models/: __init__.py  base.py  models.py
state/: __init__.py  task_state.py
utiltits/: __init__.py  check_task.py  save_update_task.py
