[tool.poetry]
name = "task-management-bot"
version = "0.1.0"
description = ""
authors = ["alexandr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.27"
environs = "^10.3.0"
asyncpg = "^0.29.0"
flake8 = "^7.0.0"
pep8-naming = "^0.13.3"
flake8-import-order = "^0.18.2"
isort = "^5.13.2"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
